--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
   <name>HTML_Select</name>
   <summary>HTML_Select is a class for generating HTML form select elements.</summary>
   <description>
-
+HTML_Select provides an OOP way of generating HTML form select elements.
   </description>
   <license>PHP License</license>
   <maintainers>
@@ -23,7 +23,7 @@
   </maintainers>
   <release>
     <version>1.2</version>
-    <date>2003-05-25</date>
+    <date>2003-07-03</date>
     <state>beta</state>
     <notes>
 First independent pear release.
