move Select.php into proper subdirectory and adjust package.xml accordingly
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Select/trunk@295025 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -29,8 +29,10 @@ HTML_Select provides an OOP way of generating HTML form select elements.
 Fix get_class compatability issue.
     </notes>
     <filelist>
-      <dir name="/" baseinstalldir="HTML">
-        <file role="php">Select.php</file>
+      <dir name="/">
+        <dir name="HTML">
+          <file role="php">Select.php</file>
+        </dir>
       </dir>
     </filelist>
     <deps>
