prepare release of version 1.3.0
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Select/trunk@295060 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -21,18 +21,26 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>adaniel1@eesus.jnj.com</email>
   <active>yes</active>
  </lead>
- <date>2004-02-26</date>
+ <date>2010-02-14</date>
  <version>
-  <release>1.2.1</release>
-  <api>1.2.1</api>
+  <release>1.3.0</release>
+  <api>1.3.0</api>
  </version>
  <stability>
-  <release>beta</release>
-  <api>beta</api>
+  <release>stable</release>
+  <api>stable</api>
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-Fix get_class compatability issue.
+QA release:
+- Fix bug #2676: Setting selected value doesn't work [cweiske]
+- Implement request #1749: add support for &lt;optgroup&gt; elements
+  for multi-level arrays [cweiske]
+- Automatically set the &lt;select&gt; element id attribute
+- Add some examples
+- Convert to package.xml v2
+- Fix coding standards
+- Stabilize after 6 years in beta
  </notes>
 
  <contents>
@@ -63,8 +71,32 @@ Fix get_class compatability issue.
 
   <release>
    <version>
+    <release>1.3.0</release>
+    <api>1.3.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2010-02-14</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+QA release:
+- Fix bug #2676: Setting selected value doesn't work [cweiske]
+- Implement request #1749: add support for &lt;optgroup&gt; elements
+for multi-level arrays [cweiske]
+- Automatically set the &lt;select&gt; element id attribute
+- Add some examples
+- Convert to package.xml v2
+- Fix coding standards
+- Stabilize after 6 years in beta
+   </notes>
+  </release>
+
+  <release>
+   <version>
     <release>1.2.1</release>
-    <api>1.2</api>
+    <api>1.2.1</api>
    </version>
    <stability>
     <release>beta</release>
