--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0
-http://pear.php.net/dtd/tasks-1.0.xsd
-http://pear.php.net/dtd/package-2.0
-http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.2" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0 http://pear.php.net/dtd/tasks-1.0.xsd http://pear.php.net/dtd/package-2.0 http://pear.php.net/dtd/package-2.0.xsd">
  <name>HTML_Select</name>
  <channel>pear.php.net</channel>
  <summary>HTML_Select is a class for generating HTML form select elements.</summary>
- <description>HTML_Select provides an OOP way of generating HTML form select elements.
-  
- </description>
+ <description>HTML_Select provides an OOP way of generating HTML form select elements.</description>
  <lead>
   <name>Klaus Guenther</name>
   <user>thesaur</user>
@@ -21,9 +16,10 @@ http://pear.php.net/dtd/package-2.0.xsd">
   <email>adaniel1@eesus.jnj.com</email>
   <active>yes</active>
  </lead>
- <date>2010-02-14</date>
+ <date>2012-03-04</date>
+ <time>13:34:36</time>
  <version>
-  <release>1.3.0</release>
+  <release>1.3.1</release>
   <api>1.3.0</api>
  </version>
  <stability>
@@ -32,25 +28,19 @@ http://pear.php.net/dtd/package-2.0.xsd">
  </stability>
  <license uri="http://www.php.net/license">PHP License</license>
  <notes>
-QA release:
-- Fix bug #2676: Setting selected value doesn't work [cweiske]
-- Implement request #1749: add support for &lt;optgroup&gt; elements
-  for multi-level arrays [cweiske]
-- Automatically set the &lt;select&gt; element id attribute
-- Add some examples
-- Convert to package.xml v2
-- Fix coding standards
-- Stabilize after 6 years in beta
+QA release
+Request #17352 PHP Deprecated: Function split() is deprecated
  </notes>
-
  <contents>
-  <dir name="/">
-   <dir name="HTML">
-    <file name="Select.php" role="php" />
-   </dir>
+  <dir baseinstalldir="/" name="/">
+   <file baseinstalldir="/" md5sum="599600a2818cf44afbef83798c5e91d4" name="docs/attributes.php" role="doc" />
+   <file baseinstalldir="/" md5sum="fceb0c82264f54e42e8ddb8a2f8bd8c3" name="docs/example.php" role="doc" />
+   <file baseinstalldir="/" md5sum="9d5041659d1c3010c6a015a406d81165" name="docs/grouped.php" role="doc" />
+   <file baseinstalldir="/" md5sum="1fca4332ec4ac5fcbdcdec21f086e36c" name="docs/multiple.php" role="doc" />
+   <file baseinstalldir="/" md5sum="673d04b2087edca32d22855338354b3c" name="HTML/Select.php" role="php" />
+   <file baseinstalldir="/" md5sum="b21dad6d729783b4f6c35fa77a50746e" name="README" role="data" />
   </dir>
  </contents>
-
  <dependencies>
   <required>
    <php>
@@ -68,31 +58,21 @@ QA release:
  </dependencies>
  <phprelease />
  <changelog>
-
   <release>
    <version>
-    <release>1.3.0</release>
-    <api>1.3.0</api>
+    <release>1.2</release>
+    <api>1.2</api>
    </version>
    <stability>
-    <release>stable</release>
-    <api>stable</api>
+    <release>beta</release>
+    <api>beta</api>
    </stability>
-   <date>2010-02-14</date>
+   <date>2003-07-03</date>
    <license uri="http://www.php.net/license">PHP License</license>
    <notes>
-QA release:
-- Fix bug #2676: Setting selected value doesn't work [cweiske]
-- Implement request #1749: add support for &lt;optgroup&gt; elements
-for multi-level arrays [cweiske]
-- Automatically set the &lt;select&gt; element id attribute
-- Add some examples
-- Convert to package.xml v2
-- Fix coding standards
-- Stabilize after 6 years in beta
+First independent pear release.
    </notes>
   </release>
-
   <release>
    <version>
     <release>1.2.1</release>
@@ -108,20 +88,43 @@ for multi-level arrays [cweiske]
 Fix get_class compatability issue.
    </notes>
   </release>
-
   <release>
    <version>
-    <release>1.2</release>
-    <api>1.2</api>
+    <release>1.3.0</release>
+    <api>1.3.0</api>
    </version>
    <stability>
-    <release>beta</release>
-    <api>beta</api>
+    <release>stable</release>
+    <api>stable</api>
    </stability>
-   <date>2003-07-03</date>
+   <date>2010-02-14</date>
    <license uri="http://www.php.net/license">PHP License</license>
    <notes>
-First independent pear release.
+QA release:
+- Fix bug #2676: Setting selected value doesn&apos;t work [cweiske]
+- Implement request #1749: add support for &lt;optgroup&gt; elements
+for multi-level arrays [cweiske]
+- Automatically set the &lt;select&gt; element id attribute
+- Add some examples
+- Convert to package.xml v2
+- Fix coding standards
+- Stabilize after 6 years in beta
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>1.3.1</release>
+    <api>1.3.0</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <date>2012-03-04</date>
+   <license uri="http://www.php.net/license">PHP License</license>
+   <notes>
+QA release
+Request #17352 PHP Deprecated: Function split() is deprecated
    </notes>
   </release>
  </changelog>
