--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "HTML_Select": "./"
+            "HTML": "./"
         }
     },
     "description": "More info available on: http://pear.php.net/package/HTML_Select",
@@ -28,7 +28,8 @@
     },
     "type": "library",
     "require": {
-        "pear/pear_exception": "*"
+        "pear/pear_exception": "*",
+        "pear/html_common": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
